# GB_CPP_web_app_course

./: README.md
Homework01/: CMakeLists.txt  README.md  a.out  draft_main.cpp
Homework01/include/: dice.h  game.h  match.h  matchbox.h  player.h
Homework01/src/: dice.cpp  game.cpp  main.cpp  matchbox.cpp  player.cpp
Homework02/: README.md
Homework02/shared/gameapp/: CMakeLists.txt  main.cpp
Homework02/shared/gamelib/: CMakeLists.txt
Homework02/shared/gamelib/include/: dice.h  match.h
Homework02/shared/scripts/: starter.sh
Homework02/static/: CMakeLists.txt
Homework02/static/gameapp/: CMakeLists.txt
Homework02/static/gamelib/: CMakeLists.txt
Homework02/static/gamelib/include/: player.h
Homework02/static/gamelib/src/: game.cpp  player.cpp
Homework03/: README.md
Homework03/TicTakToe/: CMakeLists.txt
Homework03/TicTakToe/client/: CMakeLists.txt
Homework03/TicTakToe/client/include/: aiplayer.h  board.h  consolegame.h  consoleplayer.h  game.h  gamemanager.h  player.h  simpleboard.h  ui_common.h  ui_console.h  uicommon.h  uiconsole.h  wincheck.h
Homework03/TicTakToe/client/src/: aiplayer.cpp  client.cpp  consolegame.cpp  consoleplayer.cpp  gamemanager.cpp  ui_console.cpp
